--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ header
   top:0;
   padding-top:4vh;
   margin:0;
-  width:100%;
+  width:100vw;
   height:15vh;
   background-color:#03b1fc;
 }
@@ -27,11 +27,11 @@ a{
 
 }
 .contenthome{
-   padding-top:40vh;
+   padding-top:20vh;
    width:100%;
    height:auto;
    background-color:white;
-   background-image: url("ba.jpg");
+   background-image: url("teamlogo.jpg");
    background-size:100vw;
   background-repeat:no-repeat;
 }
@@ -48,34 +48,43 @@ a{
 .homecontent{
 
   z-index: 7;
-  background-color: black;
-  opacity: 0.6;
-  color:white;
+  background-color: white;
+  opacity: 0.7;
+  color:black;
   margin:0;
   border-radius:  30px;
   padding-top:2vh;
   padding-bottom:5vh;
+  width:100%;
+  max-width:120vh;
   height:auto;
-  width:80%;
+
 }
 .homecontent2{
  font-size: 3vh;
  text-align: center;
   z-index: 7;
   background-color: black;
-  opacity: 0.6;
+  opacity: 0.8;
   color:white;
   margin:5vh;
+  margin-left:0;
   border-radius: 20px;
   padding-top:5vh;
-  height:55vh;
-  width:80%;
+  width:100%;
+  max-width:150vh;
+  height:auto;
+
 }
 .projectt{
   text-align: center;
   font-size: 4vh;
 }
 .navlist{
+  width:50%;
+  max-width:10vh;
+  height:auto;
+  font-size: 3vh;
   color:white;
   padding-left: 5vh;
   padding-right: 5vh;
@@ -86,9 +95,6 @@ a{
 .navlist:hover{
   background-color:black;
   font-size:4vh;
-}
-.nav{
-font-size: 3vh;
 }
 
 footer{
@@ -101,9 +107,11 @@ footer{
   background-color:#03b1fc;
 }
 .footerimg{
-  height:15vh;
+
   border-radius:10vh;
-  width:auto;
+  width:100%;
+  max-width:20vh;
+  height:auto;
 
 }
 .creatorlist{
@@ -135,7 +143,7 @@ li{
 .heads{
   font-size: 5vh;
   color: black;
-  padding-left:10vh;
+  padding-top:3vh;
   text-decoration: underline;
   justify-content: center;
   text-align: center;
