--- a/styles.css
+++ b/styles.css
@@ -11,17 +11,46 @@ body
   padding:0;
   background-color:#b4b4b4;
 }
+
+
+
 header
 {
   z-index: 5;
   position:sticky;
   top:0;
-  padding-top:4vh;
   margin:0;
   width:100vw;
-  height:15vh;
+  height:8vw;
   background-color:#03b1fc;
+
 }
+.navul{
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  height: 8vw;
+
+}
+
+.navlist{
+  font-size: 2.5vw;
+  color:white;
+  padding-left: 3vw;
+  padding-right: 3vw;
+  border-radius: 1vw;
+  display:flex;
+  list-style:none;
+}
+.navlist:hover{
+  background-color:black;
+  font-size:4vh;
+}
+
+
+
+
+
 a{
   text-decoration: none;
 
@@ -80,23 +109,6 @@ a{
   text-align: center;
   font-size: 4vh;
 }
-.navlist{
-  width:50%;
-  max-width:10vh;
-  height:auto;
-  font-size: 3vh;
-  color:white;
-  padding-left: 5vh;
-  padding-right: 5vh;
-  border-radius: 3vh;
-  display:inline;
-  list-style:none;
-}
-.navlist:hover{
-  background-color:black;
-  font-size:4vh;
-}
-
 footer{
   margin:0;
   color:white;
